# rsa-auth

./: Dockerfile  Makefile  fast.py  pyproject.toml
apps/sql/: sqlite_curd.py  sqlite_models.py
data/: rsa_authorize.db
routers/: return_scheme.py  router.py
utils/fast_verify/: jwt_class.py  jwt_method.py  token_method.py
